# histogram-simple

./: CHANGELOG.md  LICENSE  README.md  flake.nix  hie.yaml  histogram-simple.cabal  pkgs.nix  shell.nix  stack.yaml
.github/workflows/: CI.yaml
src/Data/: Histogram.hs
src/Data/Histogram/: Lazy.hs
