name: histogram-simple
version: 0.1.0.0
synopsis: Simple Data.Map-based histogram
-- description:
homepage: https://github.com/jonascarpay/histogram-simple#readme
license: BSD3
license-file: LICENSE
author: Jonas Carpay
maintainer: jonascarpay@gmail.com
copyright: 2019 Jonas Carpay
category: Data
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Histogram
    Data.Histogram.Lazy
  default-language:
    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , containers >= 0.6.2.1 && < 0.7
  ghc-options:
    -Wall
    -Werror
